--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,5 @@
 * text=auto
 *.a filter=lfs diff=lfs merge=lfs -text
 *.caffemodel filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
 opencv2 filter=lfs diff=lfs merge=lfs -text
